Issue #2337219 by dysproseum: Update 7400 fails if the 'mentions' field already exists.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -20,6 +20,8 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
 #2402317 by helmo: A permission was renamed which caused tests to fail.
 #2369833 by Jorrit: twitter_twitter_accounts() shouldn't return any accounts
   for the anonymous user.
+#2337219 by dysproseum: Update 7400 fails if the 'mentions' field already
+  exists.
 
 
 Twitter 7.x-5.8, 2013-06-03
