--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -5,7 +5,8 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
 #2369833 by Jorrit: twitter_twitter_accounts() shouldn't return any accounts
   for the anonymous user.
 #1953280 by lifecoderua: Wrong API declaration for hook_twitter_account_save().
-
+#604530 by aaronbauman, DamienMcKenna: Fix hook_content_extra_fields
+  integration so the fieldset can be positioned on node form.
 
 Twitter 6.x-5.1, 2013-04-19
 ---------------------------
