--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -7,6 +7,9 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
 #1953280 by lifecoderua: Wrong API declaration for hook_twitter_account_save().
 #604530 by aaronbauman, DamienMcKenna: Fix hook_content_extra_fields
   integration so the fieldset can be positioned on node form.
+#1884064 by jgSnell, e0ipso: Link path to configure is wrong in
+  hook_requirements().
+
 
 Twitter 6.x-5.1, 2013-04-19
 ---------------------------
