--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -28,6 +28,7 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
   content type edit form.
 #1884064 by jgSnell, e0ipso: Link path to configure is wrong in
   hook_requirements().
+#2402317 by DamienMcKenna, helmo: (temporarily) Fixed the 7.x-5.x branch tests.
 
 
 Twitter 7.x-5.8, 2013-06-03
