--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -29,6 +29,8 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
 #1884064 by jgSnell, e0ipso: Link path to configure is wrong in
   hook_requirements().
 #2402317 by DamienMcKenna, helmo: (temporarily) Fixed the 7.x-5.x branch tests.
+#2205277 by AdamPS: Do not convert in_reply_to_user_id field to integer when it
+  must allow larger values.
 
 
 Twitter 7.x-5.8, 2013-06-03
