Issue #2205277 by AdamPS: Do not convert in_reply_to_user_id field to integer when it must allow larger values.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -14,6 +14,8 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
 #1884064 by jgSnell, e0ipso: Link path to configure is wrong in
   hook_requirements().
 #2402321 by DamienMcKenna, helmo: (temporarily) Fixed the 7.x-6.x branch tests.
+#2205277 by AdamPS: Do not convert in_reply_to_user_id field to integer when it
+  must allow larger values.
 
 
 Twitter 7.x-6.0-alpha2, 2013-03-13
