--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -9,6 +9,8 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
   integration so the fieldset can be positioned on node form.
 #1884064 by jgSnell, e0ipso: Link path to configure is wrong in
   hook_requirements().
+#2205277 by AdamPS: Do not convert in_reply_to_user_id field to integer when it
+  must allow larger values.
 
 
 Twitter 6.x-5.1, 2013-04-19
