--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -31,6 +31,8 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
 #2402317 by DamienMcKenna, helmo: (temporarily) Fixed the 7.x-5.x branch tests.
 #2205277 by AdamPS: Do not convert in_reply_to_user_id field to integer when it
   must allow larger values.
+#1996606 by rdtome: [screen_name] token in Views display not available for use
+  with the "name" field.
 
 
 Twitter 7.x-5.8, 2013-06-03
