--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -21,6 +21,9 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
 #2139117 by maximpodorov: Don't assume all entity forms have fields.
 #1895320 by DamienMcKenna: Remove mention of hook_twitter_account_save() from
   the API docs as the hook was removed.
+#2055951 by xurizaemon, leewillis77, drupal_jon, DamienMcKenna: Change the
+  twitter_id field to a BIGINT field, to allow room for Twitter's larger-than-
+  32bit unique IDs.
 
 
 Twitter 7.x-6.0-alpha2, 2013-03-13
