--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -24,6 +24,7 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
 #2055951 by xurizaemon, leewillis77, drupal_jon, DamienMcKenna: Change the
   twitter_id field to a BIGINT field, to allow room for Twitter's larger-than-
   32bit unique IDs.
+#1943728 by frankdk, plopesc: Some text strings weren't translated.
 
 
 Twitter 7.x-6.0-alpha2, 2013-03-13
