--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -25,6 +25,8 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
   twitter_id field to a BIGINT field, to allow room for Twitter's larger-than-
   32bit unique IDs.
 #1943728 by frankdk, plopesc: Some text strings weren't translated.
+#969454 by caligari, DamienMcKenna: New text-only option for Twitter signin
+  button.
 
 
 Twitter 7.x-6.0-alpha2, 2013-03-13
