Issue #1899594 by Jaypan: Change login element into a render array.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -27,6 +27,7 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
 #1943728 by frankdk, plopesc: Some text strings weren't translated.
 #969454 by caligari, DamienMcKenna: New text-only option for Twitter signin
   button.
+#1899594 by Jaypan: Change login element into a render array.
 
 
 Twitter 7.x-6.0-alpha2, 2013-03-13
