--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -19,6 +19,8 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
 #2055951 by xurizaemon, leewillis77, drupal_jon, DamienMcKenna: Change the
   twitter_id field to a BIGINT field, to allow room for Twitter's larger-than-
   32bit unique IDs.
+#1825680 by lyricnz, DamienMcKenna: Add width/height attributes to the profile
+  images.
 
 
 Twitter 6.x-5.1, 2013-04-19
