--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -30,6 +30,7 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
 #1899594 by Jaypan: Change login element into a render array.
 #1825680 by lyricnz, DamienMcKenna: Add width/height attributes to the
   profile images.
+#2354555 by Owen Barton: Tweets should place alt text on img, not link.
 
 
 Twitter 7.x-6.0-alpha2, 2013-03-13
