--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -46,6 +46,7 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
 #1825680 by lyricnz, DamienMcKenna: Add width/height attributes to the profile
   images.
 #2354555 by Owen Barton: Tweets should place alt text on img, not link.
+#1929126 by DamienMcKenna: Remove redundant RT: bit from retweets.
 
 
 Twitter 7.x-5.8, 2013-06-03
