--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -23,6 +23,8 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
   images.
 #1929126 by DamienMcKenna: Remove redundant RT: bit from retweets.
 #1929126 by AdamPS, DamienMcKenna: Fix RT text.
+#2022485 by DamienMcKenna, Elijah Lynn: Improve status message upon posting to
+  Twitter.
 
 
 Twitter 6.x-5.1, 2013-04-19
