--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -49,6 +49,7 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
 #1929126 by DamienMcKenna: Remove redundant RT: bit from retweets.
 #1929126 by AdamPS, DamienMcKenna: Fix RT text.
 #2022485 by Elijah Lynn: Improve status message upon posting to Twitter.
+#2322683 by DamienMcKenna: Add Twitter to node extra fields list.
 
 
 Twitter 7.x-5.8, 2013-06-03
