--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -25,6 +25,7 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
 #1929126 by AdamPS, DamienMcKenna: Fix RT text.
 #2022485 by DamienMcKenna, Elijah Lynn: Improve status message upon posting to
   Twitter.
+By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
 
 
 Twitter 6.x-5.1, 2013-04-19
