--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -34,6 +34,8 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
 #2022485 by DamienMcKenna, Elijah Lynn: Improve status message upon posting to
   Twitter.
 #2485211 by crazydrake: Misspelling of "Twitter" in twitter_post.field.inc.
+#1642522 by cinnamon, digitalhorde, stimalsina, DamienMcKenna: Protocol-relative
+  URLs for profile images."
 
 
 Twitter 7.x-6.0-alpha2, 2013-03-13
