--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -28,6 +28,8 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
 By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
 #1642522 by cinnamon, digitalhorde, stimalsina, DamienMcKenna: Protocol-relative
   URLs for profile images.
+#1895320 by Drave Robber, DamienMcKenna: Updated API docs for
+  hook_twitter_account_save().
 
 
 Twitter 6.x-5.1, 2013-04-19
