--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -55,6 +55,8 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
   URLs for profile images.
 #2546622 by DamienMcKenna: Undefined index error when adding non-authenticated
   account.
+#1970498 by nielsonm, arcovia, DamienMcKenna: Only allow users to tweet using
+  global or their personal accounts.
 
 
 Twitter 7.x-5.8, 2013-06-03
