--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -57,6 +57,7 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
   account.
 #1970498 by nielsonm, arcovia, DamienMcKenna: Only allow users to tweet using
   global or their personal accounts.
+#1970498 by DamienMcKenna: Fixed the post logic.
 
 
 Twitter 7.x-5.8, 2013-06-03
