--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -32,6 +32,7 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
   hook_twitter_account_save().
 #1970498 by nielsonm, arcovia, DamienMcKenna: Only allow users to tweet using
   global or their personal accounts.
+#652680 by steinmb, DamienMcKenna: Don't assume user registration is successful.
 
 
 Twitter 6.x-5.1, 2013-04-19
