Issue #652680 by steinmb, DamienMcKenna: Don't assume user registration is successful.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -39,6 +39,7 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
 #1970498 by nielsonm, arcovia, DamienMcKenna: Only allow users to tweet using
   global or their personal accounts.
 #1970498 by DamienMcKenna: Fixed the post logic.
+#652680 by steinmb, DamienMcKenna: Don't assume user registration is successful.
 
 
 Twitter 7.x-6.0-alpha2, 2013-03-13
