--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -40,6 +40,7 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
   global or their personal accounts.
 #1970498 by DamienMcKenna: Fixed the post logic.
 #652680 by steinmb, DamienMcKenna: Don't assume user registration is successful.
+#2546686 by DamienMcKenna: Use FormAPI states logic to hide/show Post fields.
 
 
 Twitter 7.x-6.0-alpha2, 2013-03-13
