Issue #2042053 by DamienMcKenna, InternetDevels: Allow translation of the "characters remaining" phrase in the Twitter Post module

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -43,6 +43,8 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
 #2546686 by DamienMcKenna: Use FormAPI states logic to hide/show Post fields.
 #2378081 by nicrodgers, DamienMcKenna: users_show() only accepts a screen name.
 #1971744 by DamienMcKenna: Use popup dialog for token browser.
+#2042053 by InternetDevels: Allow translation of the "characters remaining"
+  phrase in the Twitter Post module.
 
 
 Twitter 7.x-6.0-alpha2, 2013-03-13
