Issue #1967798 by DamienMcKenna: Updated README.txt to explain about the OAuth reqs.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -46,6 +46,7 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
 #2042053 by InternetDevels: Allow translation of the "characters remaining"
   phrase in the Twitter Post module.
 #2403717 by dysproseum, DamienMcKenna: Catch any Twitter API request errors.
+#1967798 by DamienMcKenna: Updated README.txt to explain about the OAuth reqs.
 
 
 Twitter 7.x-6.0-alpha2, 2013-03-13
