--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -66,6 +66,8 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
   phrase in the Twitter Post module.
 #2403717 by dysproseum, DamienMcKenna: Catch any Twitter API request errors.
 #1967798 by DamienMcKenna: Updated README.txt to explain about the OAuth reqs.
+#1943398 by nwehner, tanc, DamienMcKenna: Truncate !title token to prevent the
+  tweet submission failing.
 
 
 Twitter 7.x-5.8, 2013-06-03
