--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -47,6 +47,7 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
   phrase in the Twitter Post module.
 #2403717 by dysproseum, DamienMcKenna: Catch any Twitter API request errors.
 #1967798 by DamienMcKenna: Updated README.txt to explain about the OAuth reqs.
+#2548093 by DamienMcKenna: Fixed incorrect variable name in try-catch block.
 
 
 Twitter 7.x-6.0-alpha2, 2013-03-13
