--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -43,6 +43,8 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
 #2548097 by DamienMcKenna: Fixed incorrect variable name in users_show().
 #2548101 by DamienMcKenna: Don't exist variables exist in
   twitter_oauth_callback_validate().
+#2548111 by DamienMcKenna: twitter_account_load() query error when passing in
+  a screen name.
 
 
 Twitter 6.x-5.1, 2013-04-19
