--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -52,6 +52,7 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
   length for at tweet is 117 chars when a URL is included.
 #2169609 by recrit, DamienMcKenna: Moved some theming logic outside of Views
   handler so the theming works better.
+#2054761 by pobster: Added a Views user/twitter table relationship.
 
 
 Twitter 7.x-6.0-alpha2, 2013-03-13
