--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -72,6 +72,7 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
 #2169609 by recrit: Moved some theming logic outside of Views handler so the
   theming works better.
 #2054761 by pobster: Added a Views user/twitter table relationship.
+#2040901 by jamiehollern: Allow mentions for unknown users.
 
 
 Twitter 7.x-5.8, 2013-06-03
