--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -48,6 +48,7 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
 #633450 by graker, steinmb, DamienMcKenna: Don't loose the Twitter Post options
   when previewing a node.
 #2040901 by jamiehollern, DamienMcKenna: Allow mentions for unknown users.
+#2212407 by DamienMcKenna, jonhines: Tie non-auth accounts to the correct user.
 
 
 Twitter 6.x-5.1, 2013-04-19
