--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -73,6 +73,7 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
   theming works better.
 #2054761 by pobster: Added a Views user/twitter table relationship.
 #2040901 by jamiehollern: Allow mentions for unknown users.
+#2212407 by DamienMcKenna, jonhines: Tie non-auth accounts to the correct user.
 
 
 Twitter 7.x-5.8, 2013-06-03
