--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -74,6 +74,7 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
 #2054761 by pobster: Added a Views user/twitter table relationship.
 #2040901 by jamiehollern: Allow mentions for unknown users.
 #2212407 by DamienMcKenna, jonhines: Tie non-auth accounts to the correct user.
+#2084729 by DamienMcKenna: twitter_connect() shouldn't list non-authed users.
 
 
 Twitter 7.x-5.8, 2013-06-03
