--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -75,6 +75,7 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
 #2040901 by jamiehollern: Allow mentions for unknown users.
 #2212407 by DamienMcKenna, jonhines: Tie non-auth accounts to the correct user.
 #2084729 by DamienMcKenna: twitter_connect() shouldn't list non-authed users.
+#1902780 by DamienMcKenna: Removed the dependency on Views, it's optional.
 
 
 Twitter 7.x-5.8, 2013-06-03
