--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -55,6 +55,7 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
 #2054761 by pobster: Added a Views user/twitter table relationship.
 #2040901 by jamiehollern: Allow mentions for unknown users.
 #2212407 by DamienMcKenna, jonhines: Tie non-auth accounts to the correct user.
+#1902780 by DamienMcKenna: Removed the dependency on Views, it's optional.
 
 
 Twitter 7.x-6.0-alpha2, 2013-03-13
