--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -76,6 +76,8 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
 #2212407 by DamienMcKenna, jonhines: Tie non-auth accounts to the correct user.
 #2084729 by DamienMcKenna: twitter_connect() shouldn't list non-authed users.
 #1902780 by DamienMcKenna: Removed the dependency on Views, it's optional.
+#2032057 by DamienMcKenna, Verban: Check a few values to see if the screen name
+  can be identified for the Follow field.
 
 
 Twitter 7.x-5.8, 2013-06-03
