--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -58,6 +58,8 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
 #1902780 by DamienMcKenna: Removed the dependency on Views, it's optional.
 #2032057 by DamienMcKenna, Verban: Check a few values to see if the screen name
   can be identified for the Follow field.
+#2484703 by DamienMcKenna, uladzimir.karol: Replace und/LANGUAGE_NONE usage with
+  field_get_items() in all actions.
 
 
 Twitter 7.x-6.0-alpha2, 2013-03-13
