--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -80,6 +80,8 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
   can be identified for the Follow field.
 #2484703 by DamienMcKenna, uladzimir.karol: Replace und/LANGUAGE_NONE usage with
   field_get_items() in all actions.
+#2353371 by DamienMcKenna, filippo.ledda: Fix tweet formatting so that mentions
+  prefaced by a period will work correctly.
 
 
 Twitter 7.x-5.8, 2013-06-03
