--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -60,6 +60,8 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
   can be identified for the Follow field.
 #2484703 by DamienMcKenna, uladzimir.karol: Replace und/LANGUAGE_NONE usage with
   field_get_items() in all actions.
+#2353371 by DamienMcKenna, filippo.ledda: Fix tweet formatting so that mentions
+  prefaced by a period will work correctly.
 
 
 Twitter 7.x-6.0-alpha2, 2013-03-13
