--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -62,6 +62,8 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
   field_get_items() in all actions.
 #2353371 by DamienMcKenna, filippo.ledda: Fix tweet formatting so that mentions
   prefaced by a period will work correctly.
+#2531874 by DamienMcKenna; Changed {twitter}.in_reply_to_status_id,
+  {twitter}.in_reply_to_user_id and {twitter_account}.twitter_uid to BIGINT.
 
 
 Twitter 7.x-6.0-alpha2, 2013-03-13
