--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -53,6 +53,8 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
 #1902780 by DamienMcKenna: Removed the dependency on Views, it's optional.
 #2353371 by DamienMcKenna, filippo.ledda: Fix tweet formatting so that mentions
   prefaced by a period will work correctly.
+#2531874 by DamienMcKenna; Changed {twitter}.in_reply_to_status_id,
+  {twitter}.in_reply_to_user_id and {twitter_account}.twitter_uid to BIGINT.
 
 
 Twitter 6.x-5.1, 2013-04-19
