--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -84,6 +84,8 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
   prefaced by a period will work correctly.
 #2531874 by DamienMcKenna; Changed {twitter}.in_reply_to_status_id,
   {twitter}.in_reply_to_user_id and {twitter_account}.twitter_uid to BIGINT.
+#1365452 by sillygwailo, balleyne, GaxZE, happysnowmantech, jenlampton,
+  DamienMcKenna: Text filter for embedding tweets.
 
 
 Twitter 7.x-5.8, 2013-06-03
