--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -66,6 +66,10 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
   {twitter}.in_reply_to_user_id and {twitter_account}.twitter_uid to BIGINT.
 #1365452 by sillygwailo, balleyne, GaxZE, happysnowmantech, jenlampton,
   DamienMcKenna: Text filter for embedding tweets.
+#1910376 by lex0r, joelpittet, nicrodgers, IT-Cru, DamienMcKenna, basvredeling:
+  Update {twitter}.text field to use a 'blob' to avoid problems with MySQL's
+  character limitations in the 'utf8' table scheme. See:
+  https://www.drupal.org/node/1910376
 
 
 Twitter 7.x-6.0-alpha2, 2013-03-13
