--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -70,6 +70,8 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
   Update {twitter}.text field to use a 'blob' to avoid problems with MySQL's
   character limitations in the 'utf8' table scheme. See:
   https://www.drupal.org/node/1910376
+#2534206 by DamienMcKenna: More verbose comments in hook_schema to explain why
+  the {twitter}.text field is stored as a blob.
 
 
 Twitter 7.x-6.0-alpha2, 2013-03-13
