--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -74,6 +74,8 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
   the {twitter}.text field is stored as a blob.
 #1878660 by DamienMcKenna: Don't show the login/registration form options if the
   API keys haven't been saved yet.
+#1886540 by DamienMcKenna: By default don't allow logins when the site is in
+  maintenance mode, but give sites the option to allow it.
 
 
 Twitter 7.x-6.0-alpha2, 2013-03-13
