--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -76,6 +76,7 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
   API keys haven't been saved yet.
 #1886540 by DamienMcKenna: By default don't allow logins when the site is in
   maintenance mode, but give sites the option to allow it.
+#2338125 by durum: Fixed permission check for adding non-authenticated accounts.
 
 
 Twitter 7.x-6.0-alpha2, 2013-03-13
