Issue #2338125 by durum: Fixed permission check for adding non-authenticated accounts.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -98,6 +98,7 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
   that are already published, but give an option to change this.
 #1886540 by DamienMcKenna: By default don't allow logins when the site is in
   maintenance mode, but give sites the option to allow it.
+#2338125 by durum: Fixed permission check for adding non-authenticated accounts.
 
 
 Twitter 7.x-5.8, 2013-06-03
