--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -77,6 +77,8 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
 #1886540 by DamienMcKenna: By default don't allow logins when the site is in
   maintenance mode, but give sites the option to allow it.
 #2338125 by durum: Fixed permission check for adding non-authenticated accounts.
+#1895472 by DamienMcKenna, Adirael: Don't allow people to edit each other's
+  Twitter accounts.
 
 
 Twitter 7.x-6.0-alpha2, 2013-03-13
