--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -79,6 +79,7 @@ By DamienMcKenna: Initial CHANGELOG.txt file.
 #2338125 by durum: Fixed permission check for adding non-authenticated accounts.
 #1895472 by DamienMcKenna, Adirael: Don't allow people to edit each other's
   Twitter accounts.
+#1982786 by DamienMcKenna: Fixed signin callback using a D6 function.
 
 
 Twitter 7.x-6.0-alpha2, 2013-03-13
