--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -72,6 +72,7 @@ By DamienMcKenna: Misspelling of "Twitter" in twitter.pages.inc.
 #2338125 by durum: Fixed permission check for adding non-authenticated accounts.
 #1895472 by DamienMcKenna, Adirael: Don't allow people to edit each other's
   Twitter accounts.
+#1993470 by jamix, DamienMcKenna: Improved _twitter_filter_text().
 
 
 Twitter 6.x-5.1, 2013-04-19
